# thehistoryatlas

./: .gitignore  .test_env  CLAUDE.md  Makefile  README.md  add_indices.py  api.txt  build.sh  build_data.yml  compose.yaml  docker-compose-dev.yaml  docker-compose.yaml  env.example  integration-test-env.yml  run_dev.sh  service_tests.yaml  test-cluster.yaml  test.sh  test_cluster.yaml  test_requirements.txt  test_server.yaml  tests.yaml  tha-config.yaml  todo
legacy/pylib/pybroker/: README.md  pyproject.toml
text_reader/: main.py  pyproject.toml  requirements.txt
text_reader/experiments/: prompt_tuning.py  test_extraction_regression.py  test_time_precision.py
text_reader/experiments/prompts/: v10_multi_person.txt  v1_full_names.txt  v2_all_fixes.txt  v3_narrative.txt  v4_spans.txt  v5_place_fix.txt  v6_narrative.txt  v7_minimal_multisentence.txt  v8_structured_enrichment.txt  v9_anti_range.txt
text_reader/experiments/results/: baseline.json  baseline_norwich.json  baseline_pleyel.json  norwich_comparison.txt  v10_norwich_comparison.txt  v10_sonnet_norwich.json  v1_full_names.json  v2_all_fixes.json  v3_narrative.json  v4_haiku_norwich_sample.json  v4_haiku_sample.json  v4_mendelssohn.json  v4_norwich.json  v4_pleyel.json  v5_mendelssohn.json  (+22 more)
text_reader/tests/: test_claude_client.py  test_entity_resolver.py  test_geonames.py  test_pdf_reader.py  test_publisher.py
text_reader/text_reader/: base_client.py  claude_client.py  claude_code_client.py  config.py  entity_resolver.py  extractor.py  geonames.py  pdf_reader.py  publisher.py  rest_client.py  types.py
(+1168 files in other folders)
