[tool.poetry]
name = "pybroker"
version = "0.1.0"
description = ""
authors = ["Joshua Stauffer <66793731+joshua-stauffer@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aio-pika = "^6.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
